--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 
 <title> Calculator </title>
 
-<link rel="stylesheet" href="calc.css">
-<script src="calc.js"></script>
+<link rel="stylesheet" href="styles.css">
 
  </head>
 
@@ -53,5 +52,6 @@
 			</tbody>
 		</table>
 	</div>
+	<script src="scripts.js"></script>
 </body>
 </html>
